Removing import of StandardCharset to keep compatibility with Java 6